<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/cream_white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/DoctorIdTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:maxLines="1"
            android:padding="3dp"
            android:text="@string/doctor_id"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/DoctorNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:maxLines="1"
            android:padding="3dp"
            android:text="@string/Doctor_Name"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DoctorEmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:maxLines="1"
            android:padding="3dp"
            android:text="@string/email"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/DoctorGenderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:maxLines="1"
            android:padding="3dp"
            android:text="@string/gender"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DoctorMonthTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="3dp"
                android:maxLines="1"
                android:padding="3dp"
                android:text="@string/xx"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/Divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="3dp"
                android:maxLines="1"
                android:padding="3dp"
                android:text="@string/divider"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/DoctorYearTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:maxLines="1"
                android:padding="3dp"
                android:text="@string/xxxx"
                android:textColor="@color/black"/>

        </LinearLayout>









    </LinearLayout>

</androidx.cardview.widget.CardView>