<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".AddDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/full_name"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:startIconDrawable="@drawable/ic_person_black">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/EmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:startIconDrawable="@drawable/ic_mail_black">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/GenderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/MaleBtn"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/male"
                android:layout_marginTop="5dp"
                app:cornerRadius="8dp"
                android:minHeight="@dimen/m_button_height"/>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/FemaleBtn"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:backgroundTint="@color/yellow"
                android:layout_marginTop="5dp"
                app:cornerRadius="8dp"
                android:minHeight="@dimen/m_button_height"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/OthersBtn"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/yellow"
                app:cornerRadius="8dp"
                android:minHeight="@dimen/m_button_height"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/practicingTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practicing_form"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MonthsTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/months"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <EditText
                    android:id="@+id/monthsEt"
                    android:layout_width="164dp"
                    android:layout_height="53dp"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/YearTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/years"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp">

                <EditText
                    android:id="@+id/yearEt"
                    android:layout_width="164dp"
                    android:layout_height="53dp"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/UpdateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="20dp"
            app:cornerRadius="8dp"
            android:layout_gravity="center_horizontal"
            android:minHeight="@dimen/m_button_height"/>

        <!--progress bar for loading -->
        <ProgressBar
            android:id="@+id/idLoadingPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>



</ScrollView>

